Bug 1067710 - Bump console.table columns limit to 21 to match Chrome. r=Honza.
Increasing the number of columnns highlighted some issues:
- Some element could be off-screen, the grid-template-columns
  needed to be adjusted
- headers could be cut-off, we add a title on the element to
  have the full content in a tooltip
- properties that are not defined were displayed as "undefined",
  which is not really true, and take a lot of space. We render
  them as an empty cell in such case now.

A test is added to check the max-column limit.

Differential Revision: https://phabricator.services.mozilla.com/D54260

--HG--
extra : moz-landing-system : lando

--- a/devtools/client/themes/webconsole.css
+++ b/devtools/client/themes/webconsole.css
@@ -834,13 +834,14 @@ a.learn-more-link.webconsole-learn-more-link {
   padding: 5px 4px;
   font-weight: inherit;
   z-index: 1;
+  text-overflow: ellipsis;
 }
 
 .new-consoletable > [role="gridcell"] {
   background-color: var(--theme-body-background);
-  padding: 3px 4px;
-  min-width: 100px;
   color: var(--theme-body-color);
+  padding: 3px 4px;
+  text-overflow: ellipsis;
 }
 
 .new-consoletable > [role="gridcell"].even {
